@@ -21,38 +21,29 @@ package org.apache.druid.query.topn;
 
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
-import org.apache.druid.java.util.common.DateTimes;
 import org.apache.druid.java.util.common.Intervals;
 import org.apache.druid.java.util.common.Pair;
-import org.apache.druid.java.util.common.granularity.Granularity;
-import org.apache.druid.java.util.common.guava.Sequence;
-import org.apache.druid.query.QueryMetrics;
 import org.apache.druid.query.QueryRunnerTestHelper;
 import org.apache.druid.query.aggregation.AggregatorFactory;
 import org.apache.druid.query.aggregation.DoubleMaxAggregatorFactory;
 import org.apache.druid.query.aggregation.DoubleMinAggregatorFactory;
 import org.apache.druid.query.filter.DruidPredicateFactory;
-import org.apache.druid.query.filter.Filter;
 import org.apache.druid.query.filter.ValueMatcher;
 import org.apache.druid.query.monomorphicprocessing.RuntimeShapeInspector;
-import org.apache.druid.segment.Cursor;
+import org.apache.druid.segment.ColumnInspector;
 import org.apache.druid.segment.DimensionSelector;
 import org.apache.druid.segment.IdLookup;
-import org.apache.druid.segment.Metadata;
-import org.apache.druid.segment.StorageAdapter;
-import org.apache.druid.segment.VirtualColumns;
+import org.apache.druid.segment.SimpleTopNOptimizationInspector;
 import org.apache.druid.segment.column.ColumnCapabilities;
-import org.apache.druid.segment.data.Indexed;
 import org.apache.druid.segment.data.IndexedInts;
-import org.joda.time.DateTime;
-import org.joda.time.Interval;
+import org.apache.druid.testing.InitializedNullHandlingTest;
 import org.junit.Assert;
 import org.junit.Test;
 
 import javax.annotation.Nullable;
 import java.util.List;
 
-public class TopNMetricSpecOptimizationsTest
+public class TopNMetricSpecOptimizationsTest extends InitializedNullHandlingTest
 {
   private static final List<AggregatorFactory> AGGS = Lists.newArrayList(
       Iterables.concat(
@@ -81,21 +72,19 @@ public class TopNMetricSpecOptimizationsTest
         .postAggregators(QueryRunnerTestHelper.ADD_ROWS_INDEX_CONSTANT)
         .build();
 
-    StorageAdapter adapter =
-        makeFakeStorageAdapter("2018-05-30T00:00:00Z", "2018-05-30T01:00:00Z", cardinality);
     DimensionSelector dimSelector = makeFakeDimSelector(cardinality);
 
     BaseTopNAlgorithm.AggregatorArrayProvider arrayProviderToTest = new BaseTopNAlgorithm.AggregatorArrayProvider(
         dimSelector,
         query,
-        cardinality,
-        adapter
+        makeCursorInspector("2018-05-30T00:00:00Z", "2018-05-30T01:00:00Z", cardinality),
+        cardinality
     );
 
     arrayProviderToTest.ignoreAfterThreshold();
     Pair<Integer, Integer> thePair = arrayProviderToTest.computeStartEnd(cardinality);
-    Assert.assertEquals(new Integer(0), thePair.lhs);
-    Assert.assertEquals(new Integer(threshold), thePair.rhs);
+    Assert.assertEquals(Integer.valueOf(0), thePair.lhs);
+    Assert.assertEquals(Integer.valueOf(threshold), thePair.rhs);
   }
 
   @Test
@@ -115,22 +104,20 @@ public class TopNMetricSpecOptimizationsTest
         .postAggregators(QueryRunnerTestHelper.ADD_ROWS_INDEX_CONSTANT)
         .build();
 
-    StorageAdapter adapter =
-        makeFakeStorageAdapter("2018-05-30T00:00:00Z", "2018-05-30T01:00:00Z", cardinality);
     DimensionSelector dimSelector = makeFakeDimSelector(cardinality);
 
 
     BaseTopNAlgorithm.AggregatorArrayProvider arrayProviderToTest = new BaseTopNAlgorithm.AggregatorArrayProvider(
         dimSelector,
         query,
-        cardinality,
-        adapter
+        makeCursorInspector("2018-05-30T00:00:00Z", "2018-05-30T01:00:00Z", cardinality),
+        cardinality
     );
 
     arrayProviderToTest.ignoreAfterThreshold();
     Pair<Integer, Integer> thePair = arrayProviderToTest.computeStartEnd(cardinality);
-    Assert.assertEquals(new Integer(0), thePair.lhs);
-    Assert.assertEquals(new Integer(threshold), thePair.rhs);
+    Assert.assertEquals(Integer.valueOf(0), thePair.lhs);
+    Assert.assertEquals(Integer.valueOf(threshold), thePair.rhs);
   }
 
   @Test
@@ -150,22 +137,20 @@ public class TopNMetricSpecOptimizationsTest
         .postAggregators(QueryRunnerTestHelper.ADD_ROWS_INDEX_CONSTANT)
         .build();
 
-    StorageAdapter adapter =
-        makeFakeStorageAdapter("2018-05-30T00:00:00Z", "2018-05-31T00:00:00Z", cardinality);
     DimensionSelector dimSelector = makeFakeDimSelector(cardinality);
 
 
     BaseTopNAlgorithm.AggregatorArrayProvider arrayProviderToTest = new BaseTopNAlgorithm.AggregatorArrayProvider(
         dimSelector,
         query,
-        cardinality,
-        adapter
+        makeCursorInspector("2018-05-30T00:00:00Z", "2018-05-31T00:00:00Z", cardinality),
+        cardinality
     );
 
     arrayProviderToTest.ignoreAfterThreshold();
     Pair<Integer, Integer> thePair = arrayProviderToTest.computeStartEnd(cardinality);
-    Assert.assertEquals(new Integer(0), thePair.lhs);
-    Assert.assertEquals(new Integer(cardinality), thePair.rhs);
+    Assert.assertEquals(Integer.valueOf(0), thePair.lhs);
+    Assert.assertEquals(Integer.valueOf(cardinality), thePair.rhs);
   }
 
   @Test
@@ -186,21 +171,19 @@ public class TopNMetricSpecOptimizationsTest
         .postAggregators(QueryRunnerTestHelper.ADD_ROWS_INDEX_CONSTANT)
         .build();
 
-    StorageAdapter adapter =
-        makeFakeStorageAdapter("2018-05-30T00:00:00Z", "2018-05-30T01:00:00Z", cardinality);
     DimensionSelector dimSelector = makeFakeDimSelector(cardinality);
 
     BaseTopNAlgorithm.AggregatorArrayProvider arrayProviderToTest = new BaseTopNAlgorithm.AggregatorArrayProvider(
         dimSelector,
         query,
-        cardinality,
-        adapter
+        makeCursorInspector("2018-05-30T00:00:00Z", "2018-05-30T01:00:00Z", cardinality),
+        cardinality
     );
 
     arrayProviderToTest.ignoreAfterThreshold();
     Pair<Integer, Integer> thePair = arrayProviderToTest.computeStartEnd(cardinality);
-    Assert.assertEquals(new Integer(0), thePair.lhs);
-    Assert.assertEquals(new Integer(cardinality), thePair.rhs);
+    Assert.assertEquals(Integer.valueOf(0), thePair.lhs);
+    Assert.assertEquals(Integer.valueOf(cardinality), thePair.rhs);
   }
 
   @Test
@@ -220,121 +203,36 @@ public class TopNMetricSpecOptimizationsTest
         .postAggregators(QueryRunnerTestHelper.ADD_ROWS_INDEX_CONSTANT)
         .build();
 
-
-    StorageAdapter adapter =
-        makeFakeStorageAdapter("2018-05-30T00:00:00Z", "2018-05-30T01:00:00Z", cardinality);
-
     DimensionSelector dimSelector = makeFakeDimSelector(cardinality);
 
     BaseTopNAlgorithm.AggregatorArrayProvider arrayProviderToTest = new BaseTopNAlgorithm.AggregatorArrayProvider(
         dimSelector,
         query,
-        cardinality,
-        adapter
+        makeCursorInspector("2018-05-30T00:00:00Z", "2018-05-30T01:00:00Z", cardinality),
+        cardinality
     );
 
     Pair<Integer, Integer> thePair = arrayProviderToTest.computeStartEnd(cardinality);
-    Assert.assertEquals(new Integer(0), thePair.lhs);
-    Assert.assertEquals(new Integer(cardinality), thePair.rhs);
+    Assert.assertEquals(Integer.valueOf(0), thePair.lhs);
+    Assert.assertEquals(Integer.valueOf(cardinality), thePair.rhs);
   }
 
-  private StorageAdapter makeFakeStorageAdapter(String start, String end, int cardinality)
+  private TopNCursorInspector makeCursorInspector(String start, String end, int cardinality)
   {
-    StorageAdapter adapter = new StorageAdapter()
-    {
-      @Override
-      public Interval getInterval()
-      {
-        return Intervals.of(start + "/" + end);
-      }
-
-      @Override
-      public int getDimensionCardinality(String column)
-      {
-        return cardinality;
-      }
-
-      @Override
-      public DateTime getMinTime()
-      {
-        return DateTimes.of(start);
-      }
-
-
-      @Override
-      public DateTime getMaxTime()
-      {
-        return DateTimes.of(end);
-      }
-
-      // stubs below this line not important for tests
-
-      @Override
-      public Indexed<String> getAvailableDimensions()
-      {
-        return null;
-      }
-
-      @Override
-      public Iterable<String> getAvailableMetrics()
-      {
-        return null;
-      }
-
-      @Nullable
-      @Override
-      public Comparable getMinValue(String column)
-      {
-        return null;
-      }
-
-      @Nullable
-      @Override
-      public Comparable getMaxValue(String column)
-      {
-        return null;
-      }
-
-      @Nullable
-      @Override
-      public ColumnCapabilities getColumnCapabilities(String column)
-      {
-        return null;
-      }
-
-      @Override
-      public int getNumRows()
-      {
-        return 0;
-      }
-
-      @Override
-      public DateTime getMaxIngestedEventTime()
-      {
-        return null;
-      }
-
-      @Override
-      public Metadata getMetadata()
-      {
-        return null;
-      }
-
-      @Override
-      public Sequence<Cursor> makeCursors(
-          @Nullable Filter filter,
-          Interval interval,
-          VirtualColumns virtualColumns,
-          Granularity gran,
-          boolean descending,
-          @Nullable QueryMetrics<?> queryMetrics
-      )
-      {
-        return null;
-      }
-    };
-
-    return adapter;
+    return new TopNCursorInspector(
+        new ColumnInspector()
+        {
+          @Nullable
+          @Override
+          public ColumnCapabilities getColumnCapabilities(String column)
+          {
+            return null;
+          }
+        },
+        new SimpleTopNOptimizationInspector(true),
+        Intervals.of(start + "/" + end),
+        cardinality
+    );
   }
 
   private DimensionSelector makeFakeDimSelector(int cardinality)
