@@ -19,8 +19,6 @@
 
 package org.apache.druid.metadata;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.base.Optional;
 import com.google.common.base.Suppliers;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
@@ -28,24 +26,16 @@ import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import org.apache.druid.client.DataSourcesSnapshot;
 import org.apache.druid.client.ImmutableDruidDataSource;
-import org.apache.druid.error.DruidException;
-import org.apache.druid.error.DruidExceptionMatcher;
-import org.apache.druid.java.util.common.DateTimes;
 import org.apache.druid.java.util.common.Intervals;
 import org.apache.druid.java.util.common.StringUtils;
 import org.apache.druid.java.util.emitter.EmittingLogger;
-import org.apache.druid.segment.TestHelper;
+import org.apache.druid.segment.TestDataSource;
 import org.apache.druid.segment.metadata.CentralizedDatasourceSchemaConfig;
-import org.apache.druid.segment.metadata.SegmentSchemaCache;
-import org.apache.druid.segment.metadata.SegmentSchemaManager;
 import org.apache.druid.server.coordinator.CreateDataSegments;
 import org.apache.druid.server.metrics.NoopServiceEmitter;
 import org.apache.druid.timeline.DataSegment;
-import org.apache.druid.timeline.SegmentId;
 import org.apache.druid.timeline.partition.NoneShardSpec;
-import org.hamcrest.MatcherAssert;
-import org.joda.time.DateTime;
-import org.joda.time.Duration;
+import org.assertj.core.util.Sets;
 import org.joda.time.Interval;
 import org.joda.time.Period;
 import org.junit.After;
@@ -54,18 +44,11 @@ import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 
-import java.io.IOException;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTestBase
 {
-  private static class DS
-  {
-    static final String WIKI = "wikipedia";
-    static final String KOALA = "koala";
-  }
-
   private static DataSegment createSegment(
       String dataSource,
       String interval,
@@ -89,77 +72,35 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
   public final TestDerbyConnector.DerbyConnectorRule derbyConnectorRule
       = new TestDerbyConnector.DerbyConnectorRule();
 
-  private SqlSegmentsMetadataManager sqlSegmentsMetadataManager;
-  private SQLMetadataSegmentPublisher publisher;
-  private static final ObjectMapper JSON_MAPPER = TestHelper.makeJsonMapper();
-
   private final DataSegment wikiSegment1 =
-      CreateDataSegments.ofDatasource(DS.WIKI).startingAt("2012-03-15").eachOfSizeInMb(500).get(0);
+      CreateDataSegments.ofDatasource(TestDataSource.WIKI).startingAt("2012-03-15").eachOfSizeInMb(500).get(0);
   private final DataSegment wikiSegment2 =
-      CreateDataSegments.ofDatasource(DS.WIKI).startingAt("2012-01-05").eachOfSizeInMb(500).get(0);
+      CreateDataSegments.ofDatasource(TestDataSource.WIKI).startingAt("2012-01-05").eachOfSizeInMb(500).get(0);
 
-  private void publishUnusedSegments(DataSegment... segments) throws IOException
+  private void publishUnusedSegments(DataSegment... segments)
   {
     for (DataSegment segment : segments) {
-      publisher.publishSegment(segment);
-      sqlSegmentsMetadataManager.markSegmentAsUnused(segment.getId());
+      publishSegment(segment);
+      markSegmentsAsUnused(segment.getId());
     }
   }
 
   private void publishWikiSegments()
   {
-    try {
-      publisher.publishSegment(wikiSegment1);
-      publisher.publishSegment(wikiSegment2);
-    }
-    catch (Exception e) {
-      throw new RuntimeException(e);
-    }
+    publishSegment(wikiSegment1);
+    publishSegment(wikiSegment2);
   }
 
   @Before
-  public void setUp()
+  public void setUp() throws Exception
   {
-    connector = derbyConnectorRule.getConnector();
-    SegmentsMetadataManagerConfig config = new SegmentsMetadataManagerConfig();
-    config.setPollDuration(Period.seconds(3));
-
-    segmentSchemaCache = new SegmentSchemaCache(new NoopServiceEmitter());
-    segmentSchemaManager = new SegmentSchemaManager(
-        derbyConnectorRule.metadataTablesConfigSupplier().get(),
-        jsonMapper,
-        connector
-    );
-
-    final TestDerbyConnector connector = derbyConnectorRule.getConnector();
-
-    sqlSegmentsMetadataManager = new SqlSegmentsMetadataManager(
-        JSON_MAPPER,
-        Suppliers.ofInstance(config),
-        derbyConnectorRule.metadataTablesConfigSupplier(),
-        connector,
-        segmentSchemaCache,
-        CentralizedDatasourceSchemaConfig.create()
-    );
-    sqlSegmentsMetadataManager.start();
-
-    publisher = new SQLMetadataSegmentPublisher(
-        JSON_MAPPER,
-        derbyConnectorRule.metadataTablesConfigSupplier().get(),
-        connector
-    );
-
-    connector.createSegmentSchemasTable();
-    connector.createSegmentTable();
+    setUp(derbyConnectorRule);
   }
 
   @After
-  public void teardown()
+  public void tearDown()
   {
-    if (sqlSegmentsMetadataManager.isPollingDatabasePeriodically()) {
-      sqlSegmentsMetadataManager.stopPollingDatabasePeriodically();
-    }
-    sqlSegmentsMetadataManager.stop();
+    teardownManager();
   }
 
   @Test
@@ -169,18 +110,10 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
     sqlSegmentsMetadataManager.poll();
     Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
     Assert.assertTrue(
-        sqlSegmentsMetadataManager.retrieveAllDataSourceNames().isEmpty()
-    );
-    Assert.assertEquals(
-        0,
         sqlSegmentsMetadataManager
-            .getImmutableDataSourcesWithAllUsedSegments()
-            .stream()
-            .map(ImmutableDruidDataSource::getName).count()
-    );
-    Assert.assertNull(sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments(DS.WIKI));
-    Assert.assertTrue(
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments()).isEmpty()
+            .getRecentDataSourcesSnapshot()
+            .getDataSourcesWithAllUsedSegments()
+            .isEmpty()
     );
   }
 
@@ -188,20 +121,16 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
   public void testPollPeriodically()
   {
     publishWikiSegments();
-    DataSourcesSnapshot dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    DataSourcesSnapshot dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertNull(dataSourcesSnapshot);
     sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
     Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
     // This call make sure that the first poll is completed
     sqlSegmentsMetadataManager.useLatestSnapshotIfWithinDelay();
     Assert.assertTrue(sqlSegmentsMetadataManager.getLatestDatabasePoll() instanceof SqlSegmentsMetadataManager.PeriodicDatabasePoll);
-    dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertEquals(
-        ImmutableSet.of(DS.WIKI),
-        sqlSegmentsMetadataManager.retrieveAllDataSourceNames()
-    );
-    Assert.assertEquals(
-        ImmutableList.of(DS.WIKI),
+        ImmutableList.of(TestDataSource.WIKI),
         dataSourcesSnapshot.getDataSourcesWithAllUsedSegments()
                            .stream()
                            .map(ImmutableDruidDataSource::getName)
@@ -209,11 +138,11 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
     );
     Assert.assertEquals(
         ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(dataSourcesSnapshot.getDataSource(DS.WIKI).getSegments())
+        ImmutableSet.copyOf(dataSourcesSnapshot.getDataSource(TestDataSource.WIKI).getSegments())
     );
     Assert.assertEquals(
         ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(dataSourcesSnapshot.iterateAllUsedSegmentsInSnapshot())
+        retrieveAllUsedSegments()
     );
   }
 
@@ -221,7 +150,7 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
   public void testPollOnDemand()
   {
     publishWikiSegments();
-    DataSourcesSnapshot dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    DataSourcesSnapshot dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertNull(dataSourcesSnapshot);
     // This should return false and not wait/poll anything as we did not schedule periodic poll
     Assert.assertFalse(sqlSegmentsMetadataManager.useLatestSnapshotIfWithinDelay());
@@ -230,13 +159,9 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
     sqlSegmentsMetadataManager.forceOrWaitOngoingDatabasePoll();
     Assert.assertFalse(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
     Assert.assertTrue(sqlSegmentsMetadataManager.getLatestDatabasePoll() instanceof SqlSegmentsMetadataManager.OnDemandDatabasePoll);
-    dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertEquals(
-        ImmutableSet.of(DS.WIKI),
-        sqlSegmentsMetadataManager.retrieveAllDataSourceNames()
-    );
-    Assert.assertEquals(
-        ImmutableList.of(DS.WIKI),
+        ImmutableList.of(TestDataSource.WIKI),
         dataSourcesSnapshot.getDataSourcesWithAllUsedSegments()
                            .stream()
                            .map(ImmutableDruidDataSource::getName)
@@ -244,11 +169,11 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
     );
     Assert.assertEquals(
         ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(dataSourcesSnapshot.getDataSource(DS.WIKI).getSegments())
+        ImmutableSet.copyOf(dataSourcesSnapshot.getDataSource(TestDataSource.WIKI).getSegments())
     );
     Assert.assertEquals(
         ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(dataSourcesSnapshot.iterateAllUsedSegmentsInSnapshot())
+        retrieveAllUsedSegments()
     );
   }
 
@@ -256,31 +181,31 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
   public void testPollPeriodicallyAndOnDemandInterleave() throws Exception
   {
     publishWikiSegments();
-    DataSourcesSnapshot dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    DataSourcesSnapshot dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertNull(dataSourcesSnapshot);
     sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
     Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
     // This call make sure that the first poll is completed
     sqlSegmentsMetadataManager.useLatestSnapshotIfWithinDelay();
     Assert.assertTrue(sqlSegmentsMetadataManager.getLatestDatabasePoll() instanceof SqlSegmentsMetadataManager.PeriodicDatabasePoll);
-    dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertEquals(
-        ImmutableList.of(DS.WIKI),
+        ImmutableList.of(TestDataSource.WIKI),
         dataSourcesSnapshot.getDataSourcesWithAllUsedSegments()
                            .stream()
                            .map(ImmutableDruidDataSource::getName)
                            .collect(Collectors.toList())
     );
-    publisher.publishSegment(createNewSegment1(DS.KOALA));
+    publishSegment(createNewSegment1(TestDataSource.KOALA));
 
     // This call will force on demand poll
     sqlSegmentsMetadataManager.forceOrWaitOngoingDatabasePoll();
     Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
     Assert.assertTrue(sqlSegmentsMetadataManager.getLatestDatabasePoll() instanceof SqlSegmentsMetadataManager.OnDemandDatabasePoll);
     // New datasource should now be in the snapshot since we just force on demand poll.
-    dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertEquals(
-        ImmutableList.of(DS.KOALA, DS.WIKI),
+        ImmutableList.of(TestDataSource.KOALA, TestDataSource.WIKI),
         dataSourcesSnapshot.getDataSourcesWithAllUsedSegments()
                            .stream()
                            .map(ImmutableDruidDataSource::getName)
@@ -288,17 +213,17 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
     );
 
     final String newDataSource3 = "wikipedia3";
-    publisher.publishSegment(createNewSegment1(newDataSource3));
+    publishSegment(createNewSegment1(newDataSource3));
 
     // This time wait for periodic poll (not doing on demand poll so we have to wait a bit...)
-    while (sqlSegmentsMetadataManager.getDataSourcesSnapshot().getDataSource(newDataSource3) == null) {
+    while (sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot().getDataSource(newDataSource3) == null) {
       Thread.sleep(1000);
     }
     Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
     Assert.assertTrue(sqlSegmentsMetadataManager.getLatestDatabasePoll() instanceof SqlSegmentsMetadataManager.PeriodicDatabasePoll);
-    dataSourcesSnapshot = sqlSegmentsMetadataManager.getDataSourcesSnapshot();
+    dataSourcesSnapshot = sqlSegmentsMetadataManager.getLatestDataSourcesSnapshot();
     Assert.assertEquals(
-        ImmutableSet.of(DS.KOALA, "wikipedia3", DS.WIKI),
+        ImmutableSet.of(TestDataSource.KOALA, "wikipedia3", TestDataSource.WIKI),
         dataSourcesSnapshot.getDataSourcesWithAllUsedSegments()
                            .stream()
                            .map(ImmutableDruidDataSource::getName)
@@ -307,29 +232,29 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
   }
 
   @Test
-  public void testPrepareImmutableDataSourceWithUsedSegmentsAwaitsPollOnRestart() throws IOException
+  public void testPrepareImmutableDataSourceWithUsedSegmentsAwaitsPollOnRestart()
   {
     publishWikiSegments();
     DataSegment koalaSegment = pollThenStopThenPublishKoalaSegment();
     Assert.assertEquals(
-        ImmutableSet.of(koalaSegment),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments(DS.KOALA).getSegments())
+        Set.of(koalaSegment),
+        Set.copyOf(sqlSegmentsMetadataManager.getRecentDataSourcesSnapshot().getDataSource(TestDataSource.KOALA).getSegments())
     );
   }
 
   @Test
-  public void testGetDataSourceWithUsedSegmentsAwaitsPollOnRestart() throws IOException
+  public void testGetDataSourceWithUsedSegmentsAwaitsPollOnRestart()
   {
     publishWikiSegments();
     DataSegment koalaSegment = pollThenStopThenPublishKoalaSegment();
     Assert.assertEquals(
-        ImmutableSet.of(koalaSegment),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments(DS.KOALA).getSegments())
+        Set.of(koalaSegment),
+        Set.copyOf(sqlSegmentsMetadataManager.getRecentDataSourcesSnapshot().getDataSource(TestDataSource.KOALA).getSegments())
     );
   }
 
   @Test
-  public void testPrepareImmutableDataSourcesWithAllUsedSegmentsAwaitsPollOnRestart() throws IOException
+  public void testPrepareImmutableDataSourcesWithAllUsedSegmentsAwaitsPollOnRestart()
   {
     publishWikiSegments();
     DataSegment koalaSegment = pollThenStopThenPublishKoalaSegment();
@@ -337,7 +262,8 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
         ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment),
         ImmutableSet.copyOf(
             sqlSegmentsMetadataManager
-                .getImmutableDataSourcesWithAllUsedSegments()
+                .getRecentDataSourcesSnapshot()
+                .getDataSourcesWithAllUsedSegments()
                 .stream()
                 .flatMap((ImmutableDruidDataSource dataSource) -> dataSource.getSegments().stream())
                 .iterator()
@@ -346,163 +272,51 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
   }
 
   @Test
-  public void testIterateAllUsedSegmentsAwaitsPollOnRestart() throws IOException
+  public void testIterateAllUsedSegmentsAwaitsPollOnRestart()
   {
     publishWikiSegments();
     DataSegment koalaSegment = pollThenStopThenPublishKoalaSegment();
     Assert.assertEquals(
         ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
+        retrieveAllUsedSegments()
     );
   }
 
-  private DataSegment pollThenStopThenPublishKoalaSegment() throws IOException
+  private DataSegment pollThenStopThenPublishKoalaSegment()
   {
     sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
     sqlSegmentsMetadataManager.poll();
     sqlSegmentsMetadataManager.stopPollingDatabasePeriodically();
     Assert.assertFalse(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-    Assert.assertEquals(
-        ImmutableSet.of(DS.WIKI),
-        sqlSegmentsMetadataManager.retrieveAllDataSourceNames()
-    );
-    final DataSegment koalaSegment = createNewSegment1(DS.KOALA);
-    publisher.publishSegment(koalaSegment);
+    final DataSegment koalaSegment = createNewSegment1(TestDataSource.KOALA);
+    publishSegment(koalaSegment);
     sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
     return koalaSegment;
   }
+
   /**
    * Create a corrupted segment entry in the segments table to test
    * whether the overall loading of segments from the database continues to work
    * even if one of the entries is corrupted.
    */
   @Test
-  public void testPollWithCorruptedSegment() throws IOException
+  public void testPollWithCorruptedSegment()
   {
     publishWikiSegments();
 
     final DataSegment corruptSegment = DataSegment.builder(wikiSegment1).dataSource("corrupt-datasource").build();
-    publisher.publishSegment(corruptSegment);
+    publishSegment(corruptSegment);
     updateSegmentPayload(corruptSegment, StringUtils.toUtf8("corrupt-payload"));
 
     EmittingLogger.registerEmitter(new NoopServiceEmitter());
     sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
     Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
 
+    DataSourcesSnapshot snapshot = sqlSegmentsMetadataManager.getRecentDataSourcesSnapshot();
     Assert.assertEquals(
-        DS.WIKI,
-        Iterables.getOnlyElement(sqlSegmentsMetadataManager.getImmutableDataSourcesWithAllUsedSegments()).getName()
+        TestDataSource.WIKI,
+        Iterables.getOnlyElement(snapshot.getDataSourcesWithAllUsedSegments()).getName()
     );
-  }
-
-  @Test
-  public void testGetUnusedSegmentIntervals() throws IOException
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-
-    // Allow null values of used_status_last_updated to test upgrade from older Druid versions
-    allowUsedFlagLastUpdatedToBeNullable();
-
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-    int numChangedSegments = sqlSegmentsMetadataManager.markAsUnusedAllSegmentsInDataSource(DS.WIKI);
-    Assert.assertEquals(2, numChangedSegments);
-
-    // Publish an unused segment with used_status_last_updated 2 hours ago
-    final DataSegment koalaSegment1 = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-16T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-    publishUnusedSegments(koalaSegment1);
-    derbyConnectorRule.segments().updateUsedStatusLastUpdated(
-        koalaSegment1.getId().toString(),
-        DateTimes.nowUtc().minus(Duration.standardHours(2))
-    );
-
-    // Publish an unused segment with used_status_last_updated 2 days ago
-    final DataSegment koalaSegment2 = createSegment(
-        DS.KOALA,
-        "2017-10-16T00:00:00.000/2017-10-17T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-    publishUnusedSegments(koalaSegment2);
-    derbyConnectorRule.segments().updateUsedStatusLastUpdated(
-        koalaSegment2.getId().toString(),
-        DateTimes.nowUtc().minus(Duration.standardDays(2))
-    );
-
-    // Publish an unused segment and set used_status_last_updated to null
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-    publishUnusedSegments(koalaSegment3);
-    updateUsedStatusLastUpdatedToNull(koalaSegment3);
-
-    Assert.assertEquals(
-        ImmutableList.of(wikiSegment2.getInterval()),
-        sqlSegmentsMetadataManager.getUnusedSegmentIntervals(DS.WIKI, null, DateTimes.of("3000"), 1, DateTimes.COMPARE_DATE_AS_STRING_MAX)
-    );
-
-    // Test the DateTime maxEndTime argument of getUnusedSegmentIntervals
-    Assert.assertEquals(
-        ImmutableList.of(wikiSegment2.getInterval()),
-        sqlSegmentsMetadataManager.getUnusedSegmentIntervals(DS.WIKI, null, DateTimes.of(2012, 1, 7, 0, 0), 1, DateTimes.COMPARE_DATE_AS_STRING_MAX)
-    );
-    Assert.assertEquals(
-        ImmutableList.of(wikiSegment1.getInterval()),
-        sqlSegmentsMetadataManager.getUnusedSegmentIntervals(DS.WIKI, DateTimes.of(2012, 1, 7, 0, 0), DateTimes.of(2012, 4, 7, 0, 0), 1, DateTimes.COMPARE_DATE_AS_STRING_MAX)
-    );
-    Assert.assertEquals(
-        ImmutableList.of(),
-        sqlSegmentsMetadataManager.getUnusedSegmentIntervals(DS.WIKI, DateTimes.of(2012, 1, 7, 0, 0), DateTimes.of(2012, 1, 7, 0, 0), 1, DateTimes.COMPARE_DATE_AS_STRING_MAX)
-    );
-
-    Assert.assertEquals(
-        ImmutableList.of(wikiSegment2.getInterval(), wikiSegment1.getInterval()),
-        sqlSegmentsMetadataManager.getUnusedSegmentIntervals(DS.WIKI, null, DateTimes.of("3000"), 5, DateTimes.COMPARE_DATE_AS_STRING_MAX)
-    );
-
-    // Test a buffer period that should exclude some segments
-
-    // The wikipedia datasource has segments generated with last used time equal to roughly the time of test run. None of these segments should be selected with a bufer period of 1 day
-    Assert.assertEquals(
-        ImmutableList.of(),
-        sqlSegmentsMetadataManager.getUnusedSegmentIntervals(DS.WIKI, DateTimes.COMPARE_DATE_AS_STRING_MIN, DateTimes.of("3000"), 5, DateTimes.nowUtc().minus(Duration.parse("PT86400S")))
-    );
-
-    // koalaSegment3 has a null used_status_last_updated which should mean getUnusedSegmentIntervals never returns it
-    // koalaSegment2 has a used_status_last_updated older than 1 day which means it should be returned
-    // The last of the 3 segments in koala has a used_status_last_updated date less than one day and should not be returned
-    Assert.assertEquals(
-        ImmutableList.of(koalaSegment2.getInterval()),
-        sqlSegmentsMetadataManager.getUnusedSegmentIntervals(
-            DS.KOALA,
-            DateTimes.COMPARE_DATE_AS_STRING_MIN,
-            DateTimes.of("3000"),
-            5,
-            DateTimes.nowUtc().minus(Duration.parse("PT86400S"))
-        )
-    );
-  }
-
-  @Test(timeout = 60_000)
-  public void testMarkAsUnusedAllSegmentsInDataSource() throws IOException, InterruptedException
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    publisher.publishSegment(createNewSegment1(DS.KOALA));
-
-    awaitDataSourceAppeared(DS.KOALA);
-    int numChangedSegments = sqlSegmentsMetadataManager.markAsUnusedAllSegmentsInDataSource(DS.KOALA);
-    Assert.assertEquals(1, numChangedSegments);
-    awaitDataSourceDisappeared(DS.KOALA);
-    Assert.assertNull(sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments(DS.KOALA));
   }
 
   private static DataSegment createNewSegment1(String datasource)
@@ -523,774 +337,33 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
     );
   }
 
-  @Test(timeout = 60_000)
-  public void testMarkSegmentAsUnused() throws IOException, InterruptedException
-  {
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-16T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    publisher.publishSegment(koalaSegment);
-    awaitDataSourceAppeared(DS.KOALA);
-    Assert.assertNotNull(sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments(DS.KOALA));
-
-    Assert.assertTrue(sqlSegmentsMetadataManager.markSegmentAsUnused(koalaSegment.getId()));
-    awaitDataSourceDisappeared(DS.KOALA);
-    Assert.assertNull(sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments(DS.KOALA));
-  }
-
-  private void awaitDataSourceAppeared(String datasource) throws InterruptedException
-  {
-    while (sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments(datasource) == null) {
-      Thread.sleep(5);
-    }
-  }
-
-  private void awaitDataSourceDisappeared(String dataSource) throws InterruptedException
-  {
-    while (sqlSegmentsMetadataManager.getImmutableDataSourceWithUsedSegments(dataSource) != null) {
-      Thread.sleep(5);
-    }
-  }
-
   @Test
-  public void testMarkAsUsedNonOvershadowedSegments() throws Exception
+  public void test_poll_doesNotRetrieveUnusedSegments()
   {
     publishWikiSegments();
+    final DataSegment koalaSegment1 = createNewSegment1(TestDataSource.KOALA);
+    final DataSegment koalaSegment2 = createNewSegment2(TestDataSource.KOALA);
+
+    publishSegment(koalaSegment1);
+    publishSegment(koalaSegment2);
+
+    // Poll all segments
     sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
     sqlSegmentsMetadataManager.poll();
     Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment1 = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-17T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
+    Assert.assertEquals(
+        Set.of(wikiSegment1, wikiSegment2, koalaSegment1, koalaSegment2),
+        retrieveAllUsedSegments()
     );
 
-    final DataSegment koalaSegment2 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-16T20:19:12.565Z"
-    );
+    // Mark the koala segments as unused
+    Assert.assertEquals(2, markSegmentsAsUnused(koalaSegment1.getId(), koalaSegment2.getId()));
 
-    // Overshadowed by koalaSegment2
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    publishUnusedSegments(koalaSegment1, koalaSegment2, koalaSegment3);
-    final Set<String> segmentIds = ImmutableSet.of(
-        koalaSegment1.getId().toString(),
-        koalaSegment2.getId().toString(),
-        koalaSegment3.getId().toString()
-    );
-
+    // Verify that subsequent poll only retrieves the used segments
     sqlSegmentsMetadataManager.poll();
     Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-    Assert.assertEquals(2, sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegments(DS.KOALA, segmentIds));
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment1, koalaSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUsedNonOvershadowedSegmentsInEternityIntervalWithVersions() throws Exception
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment1 = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-17T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    final DataSegment koalaSegment2 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-16T20:19:12.565Z"
-    );
-
-    // Overshadowed by koalaSegment2
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    publishUnusedSegments(koalaSegment1, koalaSegment2, koalaSegment3);
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-    Assert.assertEquals(
-        2,
-        sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegmentsInInterval(
-            DS.KOALA,
-            Intervals.ETERNITY,
-            ImmutableList.of("2017-10-15T20:19:12.565Z", "2017-10-16T20:19:12.565Z")
-        )
-    );
-    sqlSegmentsMetadataManager.poll();
-
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment1, koalaSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUsedNonOvershadowedSegmentsInIntervalWithEmptyVersions() throws Exception
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment1 = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-17T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    final DataSegment koalaSegment2 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-16T20:19:12.565Z"
-    );
-
-    // Overshadowed by koalaSegment2
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    publishUnusedSegments(koalaSegment1, koalaSegment2, koalaSegment3);
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-    Assert.assertEquals(
-        0,
-        sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegmentsInInterval(
-            DS.KOALA,
-            Intervals.of("2017/2018"),
-            ImmutableList.of()
-        )
-    );
-    sqlSegmentsMetadataManager.poll();
-
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUsedNonOvershadowedSegmentsInEternityIntervalWithEmptyVersions() throws Exception
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment1 = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-17T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    final DataSegment koalaSegment2 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-16T20:19:12.565Z"
-    );
-
-    // Overshadowed by koalaSegment2
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    publishUnusedSegments(koalaSegment1, koalaSegment2, koalaSegment3);
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-    Assert.assertEquals(
-        0,
-        sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegmentsInInterval(
-            DS.KOALA,
-            Intervals.ETERNITY,
-            ImmutableList.of()
-        )
-    );
-    sqlSegmentsMetadataManager.poll();
-
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUsedNonOvershadowedSegmentsInFiniteIntervalWithVersions() throws Exception
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment1 = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-17T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    final DataSegment koalaSegment2 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-16T20:19:12.565Z"
-    );
-
-    // Overshadowed by koalaSegment2
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    publishUnusedSegments(koalaSegment1, koalaSegment2, koalaSegment3);
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-    Assert.assertEquals(
-        2,
-        sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegmentsInInterval(
-            DS.KOALA,
-            Intervals.of("2017-10-15/2017-10-18"),
-            ImmutableList.of("2017-10-15T20:19:12.565Z", "2017-10-16T20:19:12.565Z")
-        )
-    );
-    sqlSegmentsMetadataManager.poll();
-
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment1, koalaSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUsedNonOvershadowedSegmentsWithNonExistentVersions() throws Exception
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment1 = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-17T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    final DataSegment koalaSegment2 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-16T20:19:12.565Z"
-    );
-
-    // Overshadowed by koalaSegment2
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    publishUnusedSegments(koalaSegment1, koalaSegment2, koalaSegment3);
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-    Assert.assertEquals(
-        0,
-        sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegmentsInInterval(
-            DS.KOALA,
-            Intervals.ETERNITY,
-            ImmutableList.of("foo", "bar")
-        )
-    );
-    sqlSegmentsMetadataManager.poll();
-
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUsedNonOvershadowedSegmentsInvalidDataSource() throws Exception
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment1 = createNewSegment1(DS.KOALA);
-    final DataSegment koalaSegment2 = createNewSegment1(DS.KOALA);
-
-    publishUnusedSegments(koalaSegment1, koalaSegment2);
-    final ImmutableSet<String> segmentIds =
-        ImmutableSet.of(koalaSegment1.getId().toString(), koalaSegment2.getId().toString());
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-
-    MatcherAssert.assertThat(
-        Assert.assertThrows(
-            DruidException.class,
-            () -> sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegments("wrongDataSource", segmentIds)
-        ),
-        DruidExceptionMatcher
-            .invalidInput()
-            .expectMessageContains("Could not find segment IDs")
-    );
-  }
-
-  @Test
-  public void testMarkAsUsedNonOvershadowedSegmentsWithInvalidSegmentIds()
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment1 = createNewSegment1(DS.KOALA);
-    final DataSegment koalaSegment2 = createNewSegment1(DS.KOALA);
-
-    final ImmutableSet<String> segmentIds =
-        ImmutableSet.of(koalaSegment1.getId().toString(), koalaSegment2.getId().toString());
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-
-    MatcherAssert.assertThat(
-        Assert.assertThrows(
-            DruidException.class,
-            () -> sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegments(DS.KOALA, segmentIds)
-        ),
-        DruidExceptionMatcher
-            .invalidInput()
-            .expectMessageContains("Could not find segment IDs")
-    );
-  }
-
-  @Test
-  public void testMarkAsUsedNonOvershadowedSegmentsInInterval() throws IOException
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment1 = createNewSegment1(DS.KOALA);
-    final DataSegment koalaSegment2 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-16T20:19:12.565Z"
-    );
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-19T00:00:00.000/2017-10-20T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    // Overshadowed by koalaSegment2
-    final DataSegment koalaSegment4 = createNewSegment2(DS.KOALA);
-
-    publishUnusedSegments(koalaSegment1, koalaSegment2, koalaSegment3, koalaSegment4);
-    final Interval theInterval = Intervals.of("2017-10-15T00:00:00.000/2017-10-18T00:00:00.000");
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-
-    // 2 out of 3 segments match the interval
-    Assert.assertEquals(2, sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegmentsInInterval(DS.KOALA, theInterval, null));
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment1, koalaSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUsedNonOvershadowedSegmentsInIntervalWithOverlappingInterval() throws IOException
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment1 = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-17T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    final DataSegment koalaSegment2 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        "2017-10-16T20:19:12.565Z"
-    );
-
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-19T00:00:00.000/2017-10-22T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    // Overshadowed by koalaSegment2
-    final DataSegment koalaSegment4 = createNewSegment2(DS.KOALA);
-
-    publishUnusedSegments(koalaSegment1, koalaSegment2, koalaSegment3, koalaSegment4);
-    final Interval theInterval = Intervals.of("2017-10-16T00:00:00.000/2017-10-20T00:00:00.000");
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-
-    // 1 out of 3 segments match the interval, other 2 overlap, only the segment fully contained will be marked unused
-    Assert.assertEquals(1, sqlSegmentsMetadataManager.markAsUsedNonOvershadowedSegmentsInInterval(DS.KOALA, theInterval, null));
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkSegmentsAsUnused() throws IOException
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment1 = createNewSegment1(DS.KOALA);
-    final DataSegment koalaSegment2 = createNewSegment1(DS.KOALA);
-
-    publisher.publishSegment(koalaSegment1);
-    publisher.publishSegment(koalaSegment2);
-
-    final ImmutableSet<SegmentId> segmentIds =
-        ImmutableSet.of(koalaSegment1.getId(), koalaSegment1.getId());
-
-    Assert.assertEquals(segmentIds.size(), sqlSegmentsMetadataManager.markSegmentsAsUnused(segmentIds));
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUnusedSegmentsInInterval() throws IOException
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment1 = createNewSegment1(DS.KOALA);
-    final DataSegment koalaSegment2 = createNewSegment2(DS.KOALA);
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-19T00:00:00.000/2017-10-20T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    publisher.publishSegment(koalaSegment1);
-    publisher.publishSegment(koalaSegment2);
-    publisher.publishSegment(koalaSegment3);
-    final Interval theInterval = Intervals.of("2017-10-15T00:00:00.000/2017-10-18T00:00:00.000");
-
-    // 2 out of 3 segments match the interval
-    Assert.assertEquals(2, sqlSegmentsMetadataManager.markAsUnusedSegmentsInInterval(DS.KOALA, theInterval, null));
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment3),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUnusedSegmentsInIntervalAndVersions() throws IOException
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DateTime now = DateTimes.nowUtc();
-    final String v1 = now.toString();
-    final String v2 = now.plus(Duration.standardDays(1)).toString();
-
-    final DataSegment koalaSegment1 = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-16T00:00:00.000",
-        v1
-    );
-    final DataSegment koalaSegment2 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        v2
-    );
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-19T00:00:00.000/2017-10-20T00:00:00.000",
-        v2
-    );
-
-    publisher.publishSegment(koalaSegment1);
-    publisher.publishSegment(koalaSegment2);
-    publisher.publishSegment(koalaSegment3);
-    final Interval theInterval = Intervals.of("2017-10-15/2017-10-18");
-
-    Assert.assertEquals(
-        2,
-        sqlSegmentsMetadataManager.markAsUnusedSegmentsInInterval(
-            DS.KOALA,
-            theInterval,
-            ImmutableList.of(v1, v2)
-        )
-    );
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment3),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUnusedSegmentsInIntervalAndNonExistentVersions() throws IOException
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DateTime now = DateTimes.nowUtc();
-    final String v1 = now.toString();
-    final String v2 = now.plus(Duration.standardDays(1)).toString();
-
-    final DataSegment koalaSegment1 = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-16T00:00:00.000",
-        v1
-    );
-    final DataSegment koalaSegment2 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        v2
-    );
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-19T00:00:00.000/2017-10-20T00:00:00.000",
-        v2
-    );
-
-    publisher.publishSegment(koalaSegment1);
-    publisher.publishSegment(koalaSegment2);
-    publisher.publishSegment(koalaSegment3);
-    final Interval theInterval = Intervals.of("2017-10-15/2017-10-18");
-
-    Assert.assertEquals(
-        0,
-        sqlSegmentsMetadataManager.markAsUnusedSegmentsInInterval(
-            DS.KOALA,
-            theInterval,
-            ImmutableList.of("foo", "bar", "baz")
-        )
-    );
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment1, koalaSegment2, koalaSegment3),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUnusedSegmentsInIntervalWithEmptyVersions() throws IOException
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DateTime now = DateTimes.nowUtc();
-    final String v1 = now.toString();
-    final String v2 = now.plus(Duration.standardDays(1)).toString();
-
-    final DataSegment koalaSegment1 = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-16T00:00:00.000",
-        v1
-    );
-    final DataSegment koalaSegment2 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        v2
-    );
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-19T00:00:00.000/2017-10-20T00:00:00.000",
-        v2
-    );
-
-    publisher.publishSegment(koalaSegment1);
-    publisher.publishSegment(koalaSegment2);
-    publisher.publishSegment(koalaSegment3);
-    final Interval theInterval = Intervals.of("2017-10-15/2017-10-18");
-
-    Assert.assertEquals(
-        0,
-        sqlSegmentsMetadataManager.markAsUnusedSegmentsInInterval(
-            DS.KOALA,
-            theInterval,
-            ImmutableList.of()
-        )
-    );
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment1, koalaSegment2, koalaSegment3),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUnusedSegmentsInEternityIntervalWithEmptyVersions() throws IOException
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DateTime now = DateTimes.nowUtc();
-    final String v1 = now.toString();
-    final String v2 = now.plus(Duration.standardDays(1)).toString();
-
-    final DataSegment koalaSegment1 = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-16T00:00:00.000",
-        v1
-    );
-    final DataSegment koalaSegment2 = createSegment(
-        DS.KOALA,
-        "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
-        v2
-    );
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-19T00:00:00.000/2017-10-20T00:00:00.000",
-        v2
-    );
-
-    publisher.publishSegment(koalaSegment1);
-    publisher.publishSegment(koalaSegment2);
-    publisher.publishSegment(koalaSegment3);
-    final Interval theInterval = Intervals.of("2017-10-15/2017-10-18");
-
-    Assert.assertEquals(
-        0,
-        sqlSegmentsMetadataManager.markAsUnusedSegmentsInInterval(
-            DS.KOALA,
-            theInterval,
-            ImmutableList.of()
-        )
-    );
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment1, koalaSegment2, koalaSegment3),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
-    );
-  }
-
-  @Test
-  public void testMarkAsUnusedSegmentsInIntervalWithOverlappingInterval() throws IOException
-  {
-    publishWikiSegments();
-    sqlSegmentsMetadataManager.startPollingDatabasePeriodically();
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertTrue(sqlSegmentsMetadataManager.isPollingDatabasePeriodically());
-
-    final DataSegment koalaSegment1 = createSegment(
-        DS.KOALA,
-        "2017-10-15T00:00:00.000/2017-10-17T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-    final DataSegment koalaSegment2 = createNewSegment2(DS.KOALA);
-    final DataSegment koalaSegment3 = createSegment(
-        DS.KOALA,
-        "2017-10-19T00:00:00.000/2017-10-22T00:00:00.000",
-        "2017-10-15T20:19:12.565Z"
-    );
-
-    publisher.publishSegment(koalaSegment1);
-    publisher.publishSegment(koalaSegment2);
-    publisher.publishSegment(koalaSegment3);
-    final Interval theInterval = Intervals.of("2017-10-16T00:00:00.000/2017-10-20T00:00:00.000");
-
-    // 1 out of 3 segments match the interval, other 2 overlap, only the segment fully contained will be marked unused
-    Assert.assertEquals(1, sqlSegmentsMetadataManager.markAsUnusedSegmentsInInterval(DS.KOALA, theInterval, null));
-
-    sqlSegmentsMetadataManager.poll();
-    Assert.assertEquals(
-        ImmutableSet.of(wikiSegment1, wikiSegment2, koalaSegment1, koalaSegment3),
-        ImmutableSet.copyOf(sqlSegmentsMetadataManager.iterateAllUsedSegments())
+        Set.of(wikiSegment1, wikiSegment2),
+        retrieveAllUsedSegments()
     );
   }
 
@@ -1305,62 +378,56 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
   }
 
   @Test
-  public void testIterateAllUsedNonOvershadowedSegmentsForDatasourceInterval() throws Exception
+  public void testIterateAllUsedNonOvershadowedSegmentsForDatasourceInterval()
   {
     publishWikiSegments();
     final Interval theInterval = Intervals.of("2012-03-15T00:00:00.000/2012-03-20T00:00:00.000");
 
     // Re-create SqlSegmentsMetadataManager with a higher poll duration
-    final SegmentsMetadataManagerConfig config = new SegmentsMetadataManagerConfig();
-    config.setPollDuration(Period.seconds(1));
+    final SegmentsMetadataManagerConfig config =
+        new SegmentsMetadataManagerConfig(Period.seconds(1), null, null);
     sqlSegmentsMetadataManager = new SqlSegmentsMetadataManager(
-        JSON_MAPPER,
+        jsonMapper,
         Suppliers.ofInstance(config),
         derbyConnectorRule.metadataTablesConfigSupplier(),
         derbyConnectorRule.getConnector(),
         segmentSchemaCache,
-        CentralizedDatasourceSchemaConfig.create()
+        CentralizedDatasourceSchemaConfig.create(),
+        NoopServiceEmitter.instance()
     );
     sqlSegmentsMetadataManager.start();
 
-    Optional<Iterable<DataSegment>> segments = sqlSegmentsMetadataManager
-        .iterateAllUsedNonOvershadowedSegmentsForDatasourceInterval(DS.WIKI, theInterval, true);
-    Assert.assertTrue(segments.isPresent());
-    Set<DataSegment> dataSegmentSet = ImmutableSet.copyOf(segments.get());
-    Assert.assertEquals(1, dataSegmentSet.size());
-    Assert.assertTrue(dataSegmentSet.contains(wikiSegment1));
+    Set<DataSegment> segments = sqlSegmentsMetadataManager
+        .getRecentDataSourcesSnapshot()
+        .getAllUsedNonOvershadowedSegments(TestDataSource.WIKI, theInterval);
+    Assert.assertEquals(Set.of(wikiSegment1), segments);
 
     final DataSegment wikiSegment3 = createSegment(
-        DS.WIKI,
+        TestDataSource.WIKI,
         "2012-03-16T00:00:00.000/2012-03-17T00:00:00.000",
         "2017-10-15T20:19:12.565Z"
     );
-    publisher.publishSegment(wikiSegment3);
+    publishSegment(wikiSegment3);
 
     // New segment is not returned since we call without force poll
     segments = sqlSegmentsMetadataManager
-        .iterateAllUsedNonOvershadowedSegmentsForDatasourceInterval(DS.WIKI, theInterval, false);
-    Assert.assertTrue(segments.isPresent());
-    dataSegmentSet = ImmutableSet.copyOf(segments.get());
-    Assert.assertEquals(1, dataSegmentSet.size());
-    Assert.assertTrue(dataSegmentSet.contains(wikiSegment1));
+        .getRecentDataSourcesSnapshot()
+        .getAllUsedNonOvershadowedSegments(TestDataSource.WIKI, theInterval);
+    Assert.assertEquals(Set.of(wikiSegment1), segments);
 
     // New segment is returned since we call with force poll
     segments = sqlSegmentsMetadataManager
-        .iterateAllUsedNonOvershadowedSegmentsForDatasourceInterval(DS.WIKI, theInterval, true);
-    Assert.assertTrue(segments.isPresent());
-    dataSegmentSet = ImmutableSet.copyOf(segments.get());
-    Assert.assertEquals(2, dataSegmentSet.size());
-    Assert.assertTrue(dataSegmentSet.contains(wikiSegment1));
-    Assert.assertTrue(dataSegmentSet.contains(wikiSegment3));
+        .forceUpdateDataSourcesSnapshot()
+        .getAllUsedNonOvershadowedSegments(TestDataSource.WIKI, theInterval);
+    Assert.assertEquals(Set.of(wikiSegment1, wikiSegment3), segments);
   }
 
   @Test
-  public void testPopulateUsedFlagLastUpdated() throws IOException
+  public void testPopulateUsedFlagLastUpdated()
   {
     allowUsedFlagLastUpdatedToBeNullable();
     final DataSegment koalaSegment = createSegment(
-        DS.KOALA,
+        TestDataSource.KOALA,
         "2017-10-17T00:00:00.000/2017-10-18T00:00:00.000",
         "2017-10-15T20:19:12.565Z"
     );
@@ -1413,4 +480,11 @@ public class SqlSegmentsMetadataManagerTest extends SqlSegmentsMetadataManagerTe
         "ALTER TABLE %1$s ALTER COLUMN USED_STATUS_LAST_UPDATED NULL"
     );
   }
+  
+  private Set<DataSegment> retrieveAllUsedSegments()
+  {
+    return Sets.newHashSet(
+        sqlSegmentsMetadataManager.getRecentDataSourcesSnapshot().iterateAllUsedSegmentsInSnapshot()
+    );
+  }  
 }
